// Copyright 2023 The Echo gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package echo.v1;

// Echo API
//
// The Echo API echos what you start it with.
service EchoAPI {
  // Echos what you send it.
  //
  // This API takes a simple message and returns the same message back.
  rpc Echo(EchoRequest) returns (EchoResponse);
}

// The request for [Echo][echo.v1.EchoAPI.Echo].
message EchoRequest {
  // Required. The message to echo.
  string message = 1;
}

// The response for [Echo][echo.v1.EchoAPI.Echo].
message EchoResponse {
  // The replicated message.
  string reply = 1;
}
